<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/Relative_global_chat"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_message"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_go_back_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back_black_24dp"
                    android:tint="@color/colorWhite"
                    android:layout_weight="3"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:foreground="?android:attr/selectableItemBackground"/>

                <TextView
                    android:id="@+id/textView_head_chat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    android:textColor="@color/colorWhite"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textAlignment="center"/>
                <ImageButton
                    android:id="@+id/btn_attach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_attach_file_black_24dp"
                    android:tint="@color/colorWhite"
                    android:layout_weight="3"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:foreground="?android:attr/selectableItemBackground"/>

                <ImageButton
                    android:id="@+id/btn_setting_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="3"
                    android:src="@drawable/ic_settings_black_24dp"
                    android:tint="@color/colorWhite"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:foreground="?android:attr/selectableItemBackground"/>


            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imageView_background_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:id="@+id/reveal_items"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rectangle"
        android:elevation="2dp"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/reveal_items"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/camera"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/camera"
                    style="?android:attr/selectableItemBackground"/>

                <TextView
                    android:id="@+id/textView_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/camera" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btn_gallery"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/gallery"
                    style="?android:attr/selectableItemBackground"/>

                <TextView
                    android:id="@+id/textView_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/galeria" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/file"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/file"
                    style="?android:attr/selectableItemBackground"/>

                <TextView
                    android:id="@+id/textView_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/file" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/contact"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/contact"
                    style="?android:attr/selectableItemBackground"/>

                <TextView
                    android:id="@+id/textView_contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/contact" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_messages_chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linearLAyout_in_message"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="2dp"
        tools:listitem="@layout/card_view_message_chat">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/linearLAyout_in_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/btn_send_audio"
        android:layout_marginBottom="10dp"
        android:elevation="1dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <EditText
                android:id="@+id/edit_hint_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/message"
                android:maxLines="3" />

            <Button
                android:id="@+id/btn_send_message"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="4"
                android:background="?android:attr/selectableItemBackground"
                android:drawableStart="@drawable/ic_send_black_24dp"
                android:drawableTint="@color/colorIcons">

            </Button>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_recording"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="54dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorWhite"
        android:elevation="2dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Grabando"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_send_audio"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_mic_black_24dp"
        android:background="?android:attr/selectableItemBackground"
        android:tint="@color/colorIcons">

    </ImageButton>

</RelativeLayout>